update dependencies list for QtAV

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -324,10 +324,9 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | libexpat             |      X      | >= 2.1.0      |               | https://libexpat.github.io/                           | For RAW to DNG converter                               |                                                                                       |
 | libexiv2             |      X      | >= 0.27.0     |               | https://github.com/Exiv2/exiv2                        | Metadata low level management.                         |                                                                                       |
 | libheif              |   optional  | >= 1.6.0      |               | https://github.com/strukturag/libheif                 | For HEIF file format support.                          | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
-| libx265              |   optional  | >= 2.2        |               | https://github.com/videolan/x265.git                  | For HEIC encoding support           |                                                                                       |
+| libx265              |   optional  | >= 2.2        |               | https://github.com/videolan/x265.git                  | For HEIC encoding support                              |                                                                                       |
 | libxml2              |   optional  | >= 2.7.0      |               | https://gitlab.gnome.org/GNOME/libxml2/               | For HtmlGallery tool                                   |                                                                                       |
 | libxslt              |   optional  | >= 1.1.0      |               | https://gitlab.gnome.org/GNOME/libxslt                | For HtmlGallery tool                                   |                                                                                       |
-| libffmpeg            |   optional  | >= 3.3.x      |               | https://git.ffmpeg.org/ffmpeg.git                     | To play video and audio (ENABLE_MEDIAPLAYER=on)        | libavformat, libavutil, libavcodec used to extract video metadata                     |
 | Flex                 |   optional  | >= 2.5.0      |               | https://github.com/westes/flex                        | For Panorama tool                                      |                                                                                       |
 | Bison                |   optional  | >= 2.5.0      |               | https://www.gnu.org/software/bison/bison.html         | For Panorama tool                                      |                                                                                       |
 | libmesa              |   optional  | >= 11.0       |               | https://gitlab.freedesktop.org/mesa/mesa/             | For Presentation tools (Linux only)                    |                                                                                       |
@@ -341,6 +340,13 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | libgomp              |   optional  | >= 5.0        |               | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
 | libmagick++          |   optional  | >= 6.7.0      |               | https://github.com/ImageMagick/ImageMagick.git        | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
 | DrMingw              |   optional  | >= 0.8.2      |               | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
+| libffmpeg            |   optional  | >= 3.3.x      |               | https://git.ffmpeg.org/ffmpeg.git                     | To play video and audio (ENABLE_MEDIAPLAYER=on)        | libavformat, libavutil, libavcodec used to extract video metadata. QtAV MediaPlayer   |
+| libass               |   optional  | >= 0.15.0     |               | https://github.com/libass/libass                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Subtitles support in QtAV MediaPlayer                                                 |
+| libuchardet          |   optional  | >= 0.0.7      |               | https://github.com/freedesktop/uchardet               | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Subtitles support in QtAV MediaPlayer                                                 |
+| libopenal            |   optional  | >= 1.20       |               | https://github.com/kcat/openal-soft                   | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Audio 3D support in QtAV MediaPlayer                                                  |
+| libportaudio         |   optional  | >= 19.0       |               | https://github.com/PortAudio/portaudio                | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Audio support in QtAV MediaPlayer                                                     |
+| libpulseaudio        |   optional  | >= 14.0       |               | https://github.com/pulseaudio/pulseaudio              | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Audio support in QtAV MediaPlayer                                                     |
+| libvaapi             |   optional  | >= 2.4        |               | https://github.com/01org/intel-vaapi-driver           | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Intel Video support in QtAV MediaPlayer                                               |
 
 \section getsourcecode Get Source Code
 
