enable mediaplayer option by default

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -454,7 +454,7 @@ There are two configuration sections : the top level and the core.
 
   - \b ENABLE_KFILEMETADATASUPPORT           : Build digiKam with KDE files indexer support (default=OFF).
   - \b ENABLE_AKONADICONTACTSUPPORT          : Build digiKam with KDE Mail Contacts support (default=OFF).
-  - \b ENABLE_MEDIAPLAYER                    : Build digiKam with Media Player support (default=OFF).
+  - \b ENABLE_MEDIAPLAYER                    : Build digiKam with Media Player support (default=ON).
   - \b ENABLE_DBUS                           : Build digiKam with DBUS support (default=ON).
   - \b ENABLE_APPSTYLES                      : Build digiKam with support for changing the widget application style (default=OFF).
   - \b ENABLE_QWEBENGINE                     : Build digiKam with QWebEngine instead of QWebKit (default=ON).
