optimize lens detection logic BUGS: 452947 FIXED-IN: 7.7.0

--- a/NEWS
+++ b/NEWS
@@ -52,4 +52,5 @@ BUGFIXES:
 036 ==> 452578 - Cannot set correct image folder when configure.
 037 ==> 452712 - Appimage for 7.6.0 will not run in Ubuntu 18.04.
 038 ==> 452677 - The date is passed to iNaturalist in the wrong format.
-039 ==> 
+039 ==> 452947 - From Batch Queue Manager metadata for lens auto-correction are not recognized.
+040 ==> 
