--- a/NEWS
+++ b/NEWS
@@ -53,4 +53,5 @@ BUGFIXES:
 037 ==> 452712 - Appimage for 7.6.0 will not run in Ubuntu 18.04.
 038 ==> 452677 - The date is passed to iNaturalist in the wrong format.
 039 ==> 452947 - From Batch Queue Manager metadata for lens auto-correction are not recognized.
-040 ==> 
+040 ==> 452577 - Export to Pinterest function does not work and shows a message status:failure,code:11.
+041 ==> 
