currently still prefer the FFmpeg backend for video Exiv2 does not know any metadata created by ExifTool in the EXV container. BUGS: 453180 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -65,4 +65,5 @@ BUGFIXES:
 048 ==> 171989 - Can't set gps photo location on .nef images with Exiv2 - Use ExifTool instead.
 049 ==> 173828 - Geolocation do not except Canon EOS 1D Mark III CR2-files with Exiv2 - Use ExifTool instead.
 050 ==> 447371 - Date of videos seems incorrect.
-051 ==> 
+051 ==> 453180 - "not valid" dates for video in "Adjust Time & Date".
+052 ==> 
