--- a/NEWS
+++ b/NEWS
@@ -56,4 +56,5 @@ BUGFIXES:
 040 ==> 452577 - Export to Pinterest function does not work and shows a message status:failure,code:11.
 041 ==> 453181 - QMYSQL driver not loaded.
 042 ==> 453231 - digiKam does not work anymore after upgrading to ubuntu 22.04.
-043 ==> 
+043 ==> 453244 - 7.6.0 Appimage crashes on Ubuntu 22.04.
+044 ==> 
