--- a/NEWS
+++ b/NEWS
@@ -59,4 +59,5 @@ BUGFIXES:
 043 ==> 453244 - 7.6.0 Appimage crashes on Ubuntu 22.04.
 044 ==> 453249 - Face regions get lost when the file is renamed.
 045 ==> 453418 - Color Profile Default Locations not Correct.
-046 ==> 
+046 ==> 453516 - Crash on Inkscape svg file in Exiv2.
+047 ==> 
