--- a/NEWS
+++ b/NEWS
@@ -62,4 +62,5 @@ BUGFIXES:
 046 ==> 453516 - Crash on Inkscape svg file in Exiv2.
 047 ==> 453611 - Showfoto main window freeze and crash at startup.
 048 ==> 453617 - Add "Ignore face" button for unrecongised faces in thumbnail view.
-049 ==> 
+049 ==> 453707 - Resizing and then ignoring recognised face ignores the original rectangle and resizes the rectangle for the suggested face.
+050 ==> 
