--- a/NEWS
+++ b/NEWS
@@ -67,4 +67,5 @@ BUGFIXES:
 051 ==> 453905 - Network Mounts are not functional.
 052 ==> 453888 - Exiftool display of a malformed tag.
 053 ==> 453899 - Ccache not detected at digikam git compilation.
-054 ==> 
+054 ==> 453417 - Color Management not working properly.
+055 ==> 
