--- a/NEWS
+++ b/NEWS
@@ -67,4 +67,5 @@ BUGFIXES:
 050 ==> 447371 - Date of videos seems incorrect.
 051 ==> 453180 - "not valid" dates for video in "Adjust Time & Date".
 052 ==> 453992 - Build error in digiKam Setup.
-053 ==> 
+053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
+054 ==> 
