--- a/NEWS
+++ b/NEWS
@@ -69,4 +69,5 @@ BUGFIXES:
 053 ==> 453899 - Ccache not detected at digikam git compilation.
 054 ==> 453417 - Color Management not working properly.
 055 ==> 453965 - Showfoto crashed while parsing image metadata with Image Magick.
-056 ==> 
+056 ==> 454090 - Prevent computer from sleeping after playing some videos.
+057 ==> 
