--- a/NEWS
+++ b/NEWS
@@ -70,4 +70,5 @@ BUGFIXES:
 054 ==> 453417 - Color Management not working properly.
 055 ==> 453965 - Showfoto crashed while parsing image metadata with Image Magick.
 056 ==> 454090 - Prevent computer from sleeping after playing some videos.
-057 ==> 
+057 ==> 362023 - Extremely slow metadata writing via maintenance.
+058 ==> 
