--- a/NEWS
+++ b/NEWS
@@ -77,4 +77,5 @@ BUGFIXES:
 061 ==> 454770 - Progress bar shows checkmark.
 062 ==> 454766 - Importing an album uses only a single thread.
 063 ==> 454768 - Progress bar is useless.
-064 ==> 
+064 ==> 454796 - 7.6.0 AppImage fails to start on Ubuntu 22.04 "symbol lookup error: /lib/x86_64-linux-gnu/libgio-2.0.so.0".
+065 ==> 
