--- a/NEWS
+++ b/NEWS
@@ -82,4 +82,5 @@ BUGFIXES:
 066 ==> 454831 - Sort photos by shooting date.
 067 ==> 454882 - Requirements for MySQL Server omit USER.
 068 ==> 454873 - Problems with lensfun and batch.
-069 ==> 
+069 ==> 454978 - Search for camera maker does not yield results for certain photos.
+070 ==> 
