copy not original metadata over metadata already saved by DImg This destroys the image files with Exiv2. BUGS: 455057 FIXED-IN: 7.7.0

--- a/NEWS
+++ b/NEWS
@@ -85,4 +85,5 @@ BUGFIXES:
 069 ==> 454978 - Search for camera maker does not yield results for certain photos.
 070 ==> 455001 - Add case for Casio/Minolta cameras in shortenedMakeInfo (itempropertiestab.cpp).
 071 ==> 455047 - Renaming folder with different case is detected as a different album.
-072 ==> 
+072 ==> 455057 - Exposure blending fails to preview.
+073 ==> 
