fix read creation date from imported items from Import Tool - Metadata for renaming will only be read after saving in the album - Correct creation of date based albums. - Add metadata and camera renaming options in the Import Tool. - Removed live renaming preview in import view,   preview for selected item only. BUGS: 452088 BUGS: 444928 BUGS: 386072 BUGS: 381214 CCBUGS: 455091 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -77,4 +77,8 @@ BUGFIXES:
 058 ==> 454656 - When locales not set, crash occurs when opening "Settings -> Configure digiKam".
 059 ==> 435377 - Speed up image preview.
 060 ==> 382362 - Locale database mismatch between Windows and Linux.
-061 ==> 
+061 ==> 452088 - Mixed up creation time and time of import.
+062 ==> 444928 - Include rename functionality (F2) also to image import tool.
+063 ==> 386072 - Can't access EXIF data on some (very few!) pictures from import camera window - works fine after that.
+064 ==> 381214 - Import may mix up picture content and metadata of different pictures.
+065 ==> 
