add Qt::NetworkAuth as required dependencies in the doc

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -285,6 +285,7 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | Qt::Gui              |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
 | Qt::Widgets          |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
 | Qt::Network          |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::NetworkAuth      |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
 | Qt::Sql              |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | Including Qt::Sqlite and Qt::Mysql plugins             |                                                                                       |
 | Qt::Xml              |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
 | Qt::Concurrent       |      X      | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
