--- a/NEWS
+++ b/NEWS
@@ -92,3 +92,4 @@ BUGFIXES:
 076 ==> 453971 - Maintenance / Face recognition - digiKam (Not responding).
 077 ==> 454940 - Exporting PSD files to Google Photos fails under Windows works under Linux.
 078 ==> 455699 - Importing folders with subdirectories creates albums, but they're missing in album view.
+079 ==> 452508 - Components information crashes digiKam.
