--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ NEW FEATURES:
 *****************************************************************************************************
 BUGFIXES:
 
-001 ==> 
+001 ==> 455805 - At start of digikam: "Your locale has changed since this album was last opened."
+002 ==> 
