add background phot for 7.8.0 release from Thomas Caswell

--- a/AUTHORS
+++ b/AUTHORS
@@ -288,6 +288,7 @@ ABOUT BACKGROUND IMAGE:
 -----------------------
 
 8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.8.0          : Thomas Caswell                 <tcaswell at gmail dot com>
 7.7.0          : Tom Laville                    <laville dot tom16 at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
