--- a/AUTHORS
+++ b/AUTHORS
@@ -95,6 +95,7 @@ DIGIKAM SPLASHSCREENS CREDITS:
 ------------------------------
 
 8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.8.0          : Erwind                         <chaos at o2 dot pl>
 7.7.0          : Nikolai Malykh                 <nmalykh at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
