update Showfoto 7.8.0 splascreen

--- a/AUTHORS
+++ b/AUTHORS
@@ -196,6 +196,7 @@ SHOWFOTO SPLASHSCREENS CREDITS:
 -------------------------------
 
 8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.8.0          : Judson Borges                  <judson dot cefet at gmail dot com>
 7.7.0          : Judson Borges                  <judson dot cefet at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
