--- a/NEWS
+++ b/NEWS
@@ -12,4 +12,5 @@ BUGFIXES:
 003 ==> 419458 - digiKam 6.4.0 appimage fails to run on centos 7.7.
 004 ==> 412778 - digiKam 6.3.0 appimage fails to run on centos 7.6.
 005 ==> 455922 - Appimage fails to start in Fedora 36 - Missing libnsl.so.1.
-006 ==> 
+006 ==> 456247 - Change MacOS to macOS.
+007 ==> 
