--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ digiKam 7.8.0 - Release date: 2022-??-??
 *****************************************************************************************************
 NEW FEATURES:
 
+General : HIF files recognized as HEIF images.
 
 *****************************************************************************************************
 BUGFIXES:
