libksane is ported to Qt6

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -331,8 +331,8 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | Flex                 |   optional  | >= 2.5.0      |               | https://github.com/westes/flex                        | For Panorama tool                                      |                                                                                       |
 | Bison                |   optional  | >= 2.5.0      |               | https://www.gnu.org/software/bison/bison.html         | For Panorama tool                                      |                                                                                       |
 | libmesa              |   optional  | >= 11.0       |               | https://gitlab.freedesktop.org/mesa/mesa/             | For Presentation tools (Linux only)                    |                                                                                       |
-| libksane             |   optional  | >= 5.55.0     | ---           | https://invent.kde.org/graphics/libksane              | Digital scanner support                                | Not yet ported to Qt6                                                                 |
-| libmarble            |   optional  | >= 0.28.0     | ---           | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
+| libksane             |   optional  | >= 19.12.0    | 22.04.2       | https://invent.kde.org/graphics/libksane              | Digital scanner support                                |                                                                                       |
+| libmarble            |   optional  | >= 19.12.0    | ---           | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
 | libjpasper           |   optional  | >= 1.900.1    |               | https://github.com/jasper-software/jasper             | For JPEG-2000 support                                  |                                                                                       |
 | libeigen3            |   optional  | >= 3.2        |               | https://github.com/eigenteam/eigen-git-mirror         | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
 | liblensfun           |   optional  | >= 0.2.8      |               | https://github.com/lensfun/lensfun                    | For LensCorrection tool                                |                                                                                       |
